# sample-application

./: app.py  pyproject.toml
application_stacks/: dash_application_stack.py  sample_application_stack.py
resource_baselines/: _lambda.py  lambda_builder.Dockerfile  s3.py
sample_application/: sample_application_stack.py
src/sample_lambda/: handler.py  pyproject.toml
tests/unit/: test_sample_application_stack.py
