[tool.poetry]
name = "sample_lambda"
version = "0.1.0"
description = ""
authors = ["Cyril <cpquitevis@gmail.com>"]
packages = [
    {include="**/*"}
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
